--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "eslint-plugin-json": "^4.0.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^5.1.3",
+        "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
         "nodemon": "^3.1.3",
         "prettier": "^3.3.1"
     }
