--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,20 @@ services:
     ports:
       - "3000:3000"
       - "9801:9801"
+    depends_on:
+      - db
+  db:
+    image: mysql:8.0
+    restart: always
+    environment:
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+    ports:
+      - ${DB_PORT}:3306
+    volumes:
+      - mysql_data:/var/lib/mysql
 
+volumes:
+  mysql_data:
