--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "start:dev": "nodemon /src/index.js"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "eslint": "^9.4.0",
@@ -19,6 +20,8 @@
         "eslint-plugin-prettier": "^5.1.3",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
+        "knex": "^3.1.0",
+        "mysql2": "^3.10.0",
         "nodemon": "^3.1.3",
         "prettier": "^3.3.1"
     }
