feat: Added functions to get, save, update, delete a post.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     image: mysql:8.0
     restart: always
     environment:
+      TZ: America/Sao_Paulo
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
