--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "knex": "^3.1.0",
         "mysql2": "^3.10.0",
         "nodemon": "^3.1.3",
+        "pino": "^9.1.0",
+        "pino-http": "^10.1.0",
         "prettier": "^3.3.1"
     }
 }
